<resources>
    <string name="app_name">SimpleChaseRun</string>
    <string name="app_friendly_name">Chase.Run</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="permissions_title">Permissions</string>
    <string name="permissions_explanation">This app needs permissions to start your run</string>
    <string name="permissions_page_message">This app needs the following Permissions to function</string>
    <string name="permissions_quit_message">Ignore permissions and continue anyway?</string>
    <string name="permissions_location">Location Permissions</string>
    <string name="permission_notify">Notification Permission</string>
    <string name="permission_background">Background Location Permission</string>
    <string name="permission_background_settings">Please allow all-time location access in settings</string>
    <string name="permission_granted">Granted</string>
    <string name="permissions_button_text">Grant Permission</string>
    <string name="not_available">N/A</string>

    <string name="error_input_invalid">Invalid Input!</string>

    <string name="unit_meter_short">m</string>
    <string name="unit_kilometer_short">km</string>
    <string name="unit_mile_short">mi</string>
    <string name="unit_feet_short">ft</string>

    <string name="unit_minutes_short">min</string>
    <string name="symbol_slash">/</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>

    <string name="run_setting_title">Run Settings</string>
    <string name="run_setting_start_run">Start Run</string>

    <string name="monster_setting_start_distance">Distance</string>
    <string name="monster_setting_start_time">Run Time</string>

    <string name="monster_name_zombie">Zombie</string>
    <string name="monster_name_infected">Infected</string>
    <string name="monster_name_t_rex">T-Rex</string>

    <string name="monster_left_text">Monsters Left: %d</string>
</resources>