<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/one_unit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_page_message"
        android:layout_marginBottom="@dimen/two_unit"/>

    <LinearLayout
        android:id="@+id/notifyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_notify" />

        <Button
            android:id="@+id/notifyPermissionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions_button_text"
            android:layout_margin="@dimen/two_unit"/>

        <TextView
            android:id="@+id/notifyPermissionGranted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_granted"
            android:textStyle="bold"
            android:layout_margin="@dimen/two_unit"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_location" />

    <Button
        android:id="@+id/locationPermissionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_button_text"
        android:layout_margin="@dimen/two_unit"/>

    <TextView
        android:id="@+id/locationGrantedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_granted"
        android:textStyle="bold"
        android:layout_margin="@dimen/two_unit"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/locationBGGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_background"/>

        <Button
            android:id="@+id/locationBGPermissionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions_button_text"
            android:layout_margin="@dimen/two_unit"/>

        <TextView
            android:id="@+id/locationBGGrantedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_granted"
            android:textStyle="bold"
            android:layout_margin="@dimen/two_unit"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>